@@ -308,7 +308,6 @@ void MainWindow::on_fileUploadAction_triggered()
 			return;
 	}
 
-
 	MerkaartorPreferences* p = MerkaartorPreferences::instance();
 	while (p->getOsmUser().isEmpty()) {
 		int ret = QMessageBox::warning(this, tr("Upload OSM"), tr("You don't seem to have specified your\n"
@@ -326,15 +325,6 @@ void MainWindow::on_fileUploadAction_triggered()
 
 void MainWindow::on_fileDownloadAction_triggered()
 {
-	MerkaartorPreferences* p = MerkaartorPreferences::instance();
-	while (p->getOsmUser().isEmpty()) {
-		int ret = QMessageBox::warning(this, tr("Download OSM"), tr("You don't seem to have specified your\n"
-			"Openstreetmap userid & password.\nDo you want to do this now?"), QMessageBox::Yes | QMessageBox::No);
-		if (ret == QMessageBox::Yes) {
-			on_toolsPreferencesAction_triggered(1);
-		} else
-			return;
-	}
 	if (downloadOSM(this, theView->projection().viewport(), theDocument)) {
 		on_editPropertiesAction_triggered();
 	} else
